--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^2.3.0",
+        "vue-resource": "^1.5.1",
         "vue-router": "^3.0.3"
     }
 }
